# sentinel

./: .deepsource.toml  .eslintrc.cjs  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc  CODE-CONVENTIONS.md  CODE-OF-CONDUCT.md  Cargo.toml  Contributor Covenant.md  LICENSE  README.md  package-lock.json  package.json  rustfmt.toml  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature-request.md  request-sentinel-guardian.md
.github/workflows/: cargo.build.yml  cargo.test.yml  eslint.yml  node-js.yml  node.js.build.yml  node.js.test.yml  node.js.yml
coverage/: block-navigation.js  changelog.ts.html  clover.xml  cobertura-coverage.xml  coverage-final.json  coverage-summary.json  index.html  lcov.info  manpage.ts.html  prettify.js  purge.ts.html  regexes.ts.html  sorter.js
coverage/lcov-report/: changelog.ts.html  index.html  manpage.ts.html  purge.ts.html  regexes.ts.html
res/changelogs/: 0.0.1-alpha.md  0.0.1.md  0.0.2-alpha.md  0.0.2.md  0.1.0-alpha.md  0.1.0.md  0.2.0-alpha.md  0.2.0.md  0.2.1-alpha.md  0.2.1.md  0.3.0-alpha.md
res/manpages/: about.md  ban.md  changelog.md  how-to-manpage-full.md  how-to-manpage.md  kick.md  man.md  purge.md
res/manpages/moderation/: kick.md  purge.md
res/messages/: ban.md  error.md  kick.md  mute.md  placeholder.md  success.md  warning.md
src/: handler.rs  main.rs  main.ts  test-import.ts
src/commands/: mod.rs  ping.rs  types.ts  util.rs
src/events/: interactionCreate.ts  logging.ts  ready.ts
src/internal/: changelog.ts  changelogs.ts  manpage.ts  manpages.ts  purge.ts  regexes.ts
src/util/: changelog.ts  changelogs.ts  colors.ts  compare.ts  embed.ts  embeds.ts  man.ts  manpages.ts  message.ts  operation.ts  operations.ts  precheck.ts  prechecks.ts  query.ts
test/: changelog.test.ts  manpage.test.ts  purge.test.ts  regexes.test.ts
test/internal/: changelog.test.ts  manpage.test.ts  purge.test.ts  regexes.test.ts  vitest-works.test.ts
(+16 files in other folders)
