[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
authors = ["Developer Ramen <ramendev2009@gmail.com>"]
description = "An experimental utilitarian and administration assistant for Discord server owners."
readme = "README.md"
repository = "https://github.com/out-post/sentinel"
license = "MIT"
keywords = ["discord", "bot"]
publish = false

[dependencies]
dotenv = "0.15.0"
# Will need to specify these later when done porting everything from TypeScript to Rust.
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.24.1", features = ["full"] }
